tests/node_tests/node_tests.exp
Error --------------------------------------------------- buffer/buffer.js:57:22

Cannot call `Buffer.from` with array literal bound to `value` because array
literal is incompatible with `ArrayBuffer`.


Error ------------------------------------------- child_process/execSync.js:8:27

Cannot call `execSync` with object literal bound to `options` because in
property `timeout`, string is incompatible with number.


Error ---------------------------------------------------- crypto/crypto.js:12:8

Cannot cast `hmac.read()` to number because:
 - `Buffer` is incompatible with number.
 - null or undefined is incompatible with number.
 - string is incompatible with number.


Error --------------------------------------------------- crypto/crypto.js:16:16

Cannot call `hmac.write` with `123` bound to `chunk` because number is
incompatible with string.


Error --------------------------------------------------- crypto/crypto.js:26:24

Cannot call `hmac.update` with `'bogus'` bound to `input_encoding` because
string is incompatible with string enum.


Error --------------------------------------------------- crypto/crypto.js:29:22

Cannot call `hmac.update` with `'bogus'` bound to `input_encoding` because
string is incompatible with string enum.


Error ---------------------------------------------------- crypto/crypto.js:36:6

Cannot cast `hmac.digest(...)` to undefined because string is incompatible with
undefined.


Error ---------------------------------------------------- crypto/crypto.js:37:6

Cannot cast `hmac.digest()` to undefined because `Buffer` is incompatible with
undefined.


Error: fs/fs.js:13
     v-----------------------------------------------------------
 13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
 14:   (data : string);
 15: });
     -^ call of method `readFile`. Could not decide which case to select
 13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
     ^^^^^^^^^^^ intersection type
  Case 3 may work:
                                  v
  909:   declare function readFile(
  910:     path: string | Buffer | URL | number,
  911:     options: { encoding: string; flag?: string },
  912:     callback: (err: ?ErrnoError, data: string) => void
  913:   ): void;
         ------^ function type. See lib: <BUILTINS>/node.js:909
  But if it doesn't, case 4 looks promising too:
                                  v
  914:   declare function readFile(
  915:     path: string | Buffer | URL | number,
  916:     options: { flag?: string },
  917:     callback: (err: ?ErrnoError, data: Buffer) => void
  918:   ): void;
         ------^ function type. See lib: <BUILTINS>/node.js:914
  Please provide additional annotation(s) to determine whether case 3 works (or consider merging it with case 4):
   13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
                                                      ^ _
   13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
                                                         ^^^^ data

Error ------------------------------------------------------------ fs/fs.js:28:2

Cannot cast `fs.readFileSync(...)` to string because `Buffer` is incompatible
with string.


Error ------------------------------------------------------------ fs/fs.js:31:2

Cannot cast `fs.readFileSync(...)` to `Buffer` because string is incompatible
with `Buffer`.


Error ------------------------------------------------------------ fs/fs.js:34:2

Cannot cast `fs.readFileSync(...)` to `Buffer` because string is incompatible
with `Buffer`.


Error ------------------------------------------------------------ fs/fs.js:37:2

Cannot cast `fs.readFileSync(...)` to string because `Buffer` is incompatible
with string.


Error ----------------------------------------------------- http/server.js:67:25

Cannot call `server.listen` with object literal bound to `callback` because a
callable signature is missing in object literal but exists in function type.


Error ----------------------------------------------------- http/server.js:68:30

Cannot call `server.listen` with object literal bound to `callback` because a
callable signature is missing in object literal but exists in function type.


Error ----------------------------------------------------- http/server.js:69:15

Cannot call `server.listen` with object literal bound to `port` because object
literal is incompatible with number.


Error ----------------------------------------------------- http/server.js:70:15

Cannot call `server.listen` with object literal bound to `port` because object
literal is incompatible with number.


Error: http/server.js:71
 71: server.listen({}, () => {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 71: server.listen({}, () => {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   71: server.listen({}, () => {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   71: server.listen({}, () => {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   71: server.listen({}, () => {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1096

Error: http/server.js:72
 72: server.listen({}, function() {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 72: server.listen({}, function() {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   72: server.listen({}, function() {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   72: server.listen({}, function() {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   72: server.listen({}, function() {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1096

Error ----------------------------------------------------- http/server.js:73:25

Cannot call `server.listen` with `123` bound to `callback` because number is
incompatible with function type.


Error ----------------------------------------------------- http/server.js:74:30

Cannot call `server.listen` with `123` bound to `callback` because number is
incompatible with function type.


Error: http/server.js:75
 75: server.listen(() => {}, 'localhost', 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 75: server.listen(() => {}, 'localhost', 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   75: server.listen(() => {}, 'localhost', 123);
                     ^^^^^^^^ function. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   75: server.listen(() => {}, 'localhost', 123);
                     ^^^^^^^^ function. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   75: server.listen(() => {}, 'localhost', 123);
                     ^^^^^^^^ function. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1096

Error: http/server.js:76
 76: server.listen(function() {}, 'localhost', 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 76: server.listen(function() {}, 'localhost', 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   76: server.listen(function() {}, 'localhost', 123);
                     ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   76: server.listen(function() {}, 'localhost', 123);
                     ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   76: server.listen(function() {}, 'localhost', 123);
                     ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1096

Error ----------------------------------------------------- http/server.js:77:25

Cannot call `server.listen` with `'localhost'` bound to `callback` because
string is incompatible with function type.


Error ----------------------------------------------------- http/server.js:78:30

Cannot call `server.listen` with `'localhost'` bound to `callback` because
string is incompatible with function type.


Error ----------------------------------------------------- http/server.js:79:21

Cannot call `server.listen` with function bound to `hostname` because function
is incompatible with string.


Error ----------------------------------------------------- http/server.js:80:21

Cannot call `server.listen` with function bound to `hostname` because function
is incompatible with string.


Error: http/server.js:81
 81: server.listen(8080, () => {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 81: server.listen(8080, () => {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   81: server.listen(8080, () => {}, 123);
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   81: server.listen(8080, () => {}, 123);
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   81: server.listen(8080, () => {}, 123);
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1096

Error: http/server.js:82
 82: server.listen(8080, function() {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 82: server.listen(8080, function() {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   82: server.listen(8080, function() {}, 123);
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   82: server.listen(8080, function() {}, 123);
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   82: server.listen(8080, function() {}, 123);
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1096

Error: http/server.js:83
 83: server.listen(8080, () => {}, 'localhost');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 83: server.listen(8080, () => {}, 'localhost');
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   83: server.listen(8080, () => {}, 'localhost');
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   83: server.listen(8080, () => {}, 'localhost');
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   83: server.listen(8080, () => {}, 'localhost');
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1096

Error: http/server.js:84
 84: server.listen(8080, function() {}, 'localhost');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 84: server.listen(8080, function() {}, 'localhost');
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1093
  Error:
   84: server.listen(8080, function() {}, 'localhost');
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1093:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1093
  Member 2:
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1095
  Error:
   84: server.listen(8080, function() {}, 'localhost');
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1095:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1095
  Member 3:
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1096
  Error:
   84: server.listen(8080, function() {}, 'localhost');
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1096:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1096

Error ---------------------------------------------------- https/server.js:67:25

Cannot call `server.listen` with object literal bound to `callback` because a
callable signature is missing in object literal but exists in function type.


Error ---------------------------------------------------- https/server.js:68:30

Cannot call `server.listen` with object literal bound to `callback` because a
callable signature is missing in object literal but exists in function type.


Error ---------------------------------------------------- https/server.js:69:15

Cannot call `server.listen` with object literal bound to `port` because object
literal is incompatible with number.


Error ---------------------------------------------------- https/server.js:70:15

Cannot call `server.listen` with object literal bound to `port` because object
literal is incompatible with number.


Error: https/server.js:71
 71: server.listen({}, () => {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 71: server.listen({}, () => {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   71: server.listen({}, () => {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   71: server.listen({}, () => {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   71: server.listen({}, () => {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1135

Error: https/server.js:72
 72: server.listen({}, function() {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 72: server.listen({}, function() {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   72: server.listen({}, function() {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   72: server.listen({}, function() {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   72: server.listen({}, function() {}, 123);
                     ^^ object literal. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1135

Error ---------------------------------------------------- https/server.js:73:25

Cannot call `server.listen` with `123` bound to `callback` because number is
incompatible with function type.


Error ---------------------------------------------------- https/server.js:74:30

Cannot call `server.listen` with `123` bound to `callback` because number is
incompatible with function type.


Error: https/server.js:75
 75: server.listen(() => {}, 'localhost', 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 75: server.listen(() => {}, 'localhost', 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   75: server.listen(() => {}, 'localhost', 123);
                     ^^^^^^^^ function. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   75: server.listen(() => {}, 'localhost', 123);
                     ^^^^^^^^ function. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   75: server.listen(() => {}, 'localhost', 123);
                     ^^^^^^^^ function. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1135

Error: https/server.js:76
 76: server.listen(function() {}, 'localhost', 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 76: server.listen(function() {}, 'localhost', 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   76: server.listen(function() {}, 'localhost', 123);
                     ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   76: server.listen(function() {}, 'localhost', 123);
                     ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   76: server.listen(function() {}, 'localhost', 123);
                     ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                          ^^^^^^ number. See lib: <BUILTINS>/node.js:1135

Error ---------------------------------------------------- https/server.js:77:25

Cannot call `server.listen` with `'localhost'` bound to `callback` because
string is incompatible with function type.


Error ---------------------------------------------------- https/server.js:78:30

Cannot call `server.listen` with `'localhost'` bound to `callback` because
string is incompatible with function type.


Error ---------------------------------------------------- https/server.js:79:21

Cannot call `server.listen` with function bound to `hostname` because function
is incompatible with string.


Error ---------------------------------------------------- https/server.js:80:21

Cannot call `server.listen` with function bound to `hostname` because function
is incompatible with string.


Error: https/server.js:81
 81: server.listen(8443, () => {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 81: server.listen(8443, () => {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   81: server.listen(8443, () => {}, 123);
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   81: server.listen(8443, () => {}, 123);
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   81: server.listen(8443, () => {}, 123);
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1135

Error: https/server.js:82
 82: server.listen(8443, function() {}, 123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 82: server.listen(8443, function() {}, 123);
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   82: server.listen(8443, function() {}, 123);
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   82: server.listen(8443, function() {}, 123);
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   82: server.listen(8443, function() {}, 123);
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1135

Error: https/server.js:83
 83: server.listen(8443, () => {}, 'localhost');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 83: server.listen(8443, () => {}, 'localhost');
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   83: server.listen(8443, () => {}, 'localhost');
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   83: server.listen(8443, () => {}, 'localhost');
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   83: server.listen(8443, () => {}, 'localhost');
                           ^^^^^^^^ function. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1135

Error: https/server.js:84
 84: server.listen(8443, function() {}, 'localhost');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `listen`. Function cannot be called on any member of intersection type
 84: server.listen(8443, function() {}, 'localhost');
     ^^^^^^^^^^^^^ intersection
  Member 1:
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1132
  Error:
   84: server.listen(8443, function() {}, 'localhost');
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1132:     listen(port?: number, hostname?: string, backlog?: number, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1132
  Member 2:
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1134
  Error:
   84: server.listen(8443, function() {}, 'localhost');
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1134:     listen(port?: number, backlog?: number, callback?: Function): Server;
                                            ^^^^^^ number. See lib: <BUILTINS>/node.js:1134
  Member 3:
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1135
  Error:
   84: server.listen(8443, function() {}, 'localhost');
                           ^^^^^^^^^^ function. This type is incompatible with the expected param type of
  1135:     listen(port?: number, hostname?: string, callback?: Function): Server;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1135

Error ------------------------------------ invalid_package_file/package.json:1:1

Unexpected end of input


Error ------------------------------------------ json_file/json_invalid.json:1:1

Unexpected token :


Error ---------------------------------------------------- json_file/test.js:4:2

Cannot cast `data.foo` to undefined because object literal is incompatible with
undefined.


Error ---------------------------------------------------- json_file/test.js:5:2

Cannot cast `data.foo.bar` to undefined because boolean is incompatible with
undefined.


Error ---------------------------------------------------- json_file/test.js:6:2

Cannot cast `data.abc` to boolean because:
 - null or undefined is incompatible with boolean.
 - string is incompatible with boolean.


Error ---------------------------------------------------- json_file/test.js:9:2

Cannot cast `data2.baz` to undefined because string is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:12:2

Cannot cast `data3.foo` to undefined because number is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:16:2

Cannot cast `data4` to undefined because array literal is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:18:2

Cannot cast `require(...)` to undefined because string is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:19:2

Cannot cast `require(...)` to undefined because number is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:20:2

Cannot cast `require(...)` to undefined because boolean is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:21:2

Cannot cast `require(...)` to undefined because boolean is incompatible with
undefined.


Error --------------------------------------------------- json_file/test.js:22:2

Cannot cast `require(...)` to undefined because null is incompatible with
undefined.


Error ------------------------------------------------------- os/userInfo.js:7:2

Cannot cast `u1.username` to `Buffer` because string is incompatible with
`Buffer`.


Error ------------------------------------------------------ os/userInfo.js:11:2

Cannot cast `u2.username` to `Buffer` because string is incompatible with
`Buffer`.


Error ------------------------------------------------------ os/userInfo.js:14:2

Cannot cast `u3.username` to string because `Buffer` is incompatible with
string.


Error ------------------------------------------------- process/nextTick.js:12:1

Cannot call `process.nextTick` because:
 - in the rest argument and then the first argument, number is incompatible with
   string.
 - in the rest argument and then the third argument, null is incompatible with
   boolean.


Error ------------------------------------------------- process/nextTick.js:22:3

Cannot call `process.nextTick` because in the rest argument and then the second
argument, string is incompatible with number.


Error ------------------------------------------------- process/nextTick.js:26:9

Cannot call `process.nextTick` because in the rest argument, function requires
another argument from function type.


Error: process/process.js:10
 10: process.emitWarning(); // error
     ^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Function cannot be called on any member of intersection type
 10: process.emitWarning(); // error
     ^^^^^^^^^^^^^^^^^^^ intersection
  Member 1:
  1933:   emitWarning(warning: string | Error): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1933
  Error:
   10: process.emitWarning(); // error
       ^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Too few arguments passed to
  1933:   emitWarning(warning: string | Error): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1933
  Member 2:
  1934:   emitWarning(warning: string, typeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1934
  Error:
   10: process.emitWarning(); // error
       ^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Too few arguments passed to
  1934:   emitWarning(warning: string, typeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1934
  Member 3:
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1935
  Error:
   10: process.emitWarning(); // error
       ^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Too few arguments passed to
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1935
  Member 4:
          v-----------
  1936:   emitWarning(
  1937:     warning: string,
  1938:     type: string,
  ...:
  1941:   ): void;
          ------^ function type. See lib: <BUILTINS>/node.js:1936
  Error:
   10: process.emitWarning(); // error
       ^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Too few arguments passed to
          v-----------
  1936:   emitWarning(
  1937:     warning: string,
  1938:     type: string,
  ...:
  1941:   ): void;
          ------^ function type. See lib: <BUILTINS>/node.js:1936

Error: process/process.js:11
 11: process.emitWarning(42); // error
     ^^^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Function cannot be called on any member of intersection type
 11: process.emitWarning(42); // error
     ^^^^^^^^^^^^^^^^^^^ intersection
  Member 1:
  1933:   emitWarning(warning: string | Error): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1933
  Error:
   11: process.emitWarning(42); // error
                           ^^ number. This type is incompatible with the expected param type of
  1933:   emitWarning(warning: string | Error): void;
                               ^^^^^^ string. See lib: <BUILTINS>/node.js:1933
  Member 2:
  1934:   emitWarning(warning: string, typeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1934
  Error:
   11: process.emitWarning(42); // error
                           ^^ number. This type is incompatible with the expected param type of
  1934:   emitWarning(warning: string, typeOrCtor: string | Function): void;
                               ^^^^^^ string. See lib: <BUILTINS>/node.js:1934
  Member 3:
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1935
  Error:
   11: process.emitWarning(42); // error
                           ^^ number. This type is incompatible with the expected param type of
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
                               ^^^^^^ string. See lib: <BUILTINS>/node.js:1935
  Member 4:
          v-----------
  1936:   emitWarning(
  1937:     warning: string,
  1938:     type: string,
  ...:
  1941:   ): void;
          ------^ function type. See lib: <BUILTINS>/node.js:1936
  Error:
   11: process.emitWarning(42); // error
                           ^^ number. This type is incompatible with the expected param type of
  1937:     warning: string,
                     ^^^^^^ string. See lib: <BUILTINS>/node.js:1937

Error: process/process.js:12
 12: process.emitWarning("blah", 42); // error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Function cannot be called on any member of intersection type
 12: process.emitWarning("blah", 42); // error
     ^^^^^^^^^^^^^^^^^^^ intersection
  Member 2:
  1934:   emitWarning(warning: string, typeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1934
  Error:
   12: process.emitWarning("blah", 42); // error
                                   ^^ number. This type is incompatible with the expected param type of
  1934:   emitWarning(warning: string, typeOrCtor: string | Function): void;
                                                   ^^^^^^ string. See lib: <BUILTINS>/node.js:1934
  Member 3:
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1935
  Error:
   12: process.emitWarning("blah", 42); // error
                                   ^^ number. This type is incompatible with the expected param type of
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
                                             ^^^^^^ string. See lib: <BUILTINS>/node.js:1935
  Member 4:
          v-----------
  1936:   emitWarning(
  1937:     warning: string,
  1938:     type: string,
  ...:
  1941:   ): void;
          ------^ function type. See lib: <BUILTINS>/node.js:1936
  Error:
   12: process.emitWarning("blah", 42); // error
                                   ^^ number. This type is incompatible with the expected param type of
  1938:     type: string,
                  ^^^^^^ string. See lib: <BUILTINS>/node.js:1938

Error: process/process.js:13
 13: process.emitWarning("blah", "blah", 42); // error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `emitWarning`. Function cannot be called on any member of intersection type
 13: process.emitWarning("blah", "blah", 42); // error
     ^^^^^^^^^^^^^^^^^^^ intersection
  Member 3:
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1935
  Error:
   13: process.emitWarning("blah", "blah", 42); // error
                                           ^^ number. This type is incompatible with the expected param type of
  1935:   emitWarning(warning: string, type: string, codeOrCtor: string | Function): void;
                                                                 ^^^^^^ string. See lib: <BUILTINS>/node.js:1935
  Member 4:
          v-----------
  1936:   emitWarning(
  1937:     warning: string,
  1938:     type: string,
  ...:
  1941:   ): void;
          ------^ function type. See lib: <BUILTINS>/node.js:1936
  Error:
   13: process.emitWarning("blah", "blah", 42); // error
                                           ^^ number. This type is incompatible with the expected param type of
  1939:     code: string,
                  ^^^^^^ string. See lib: <BUILTINS>/node.js:1939

Error -------------------------------------------------- process/process.js:14:2

Cannot cast `process.emitWarning(...)` to string because undefined is
incompatible with string.



Found 77 errors
